# hseg

./: .gitignore  .gitmodules  CMakeLists.txt  build_run_external.sh  clean_dataset_file.sh  evalLoss.sh  imageList.txt  main.cpp  makeGIF.sh  makeListFileNoFlipped.sh  prepareCityscapesDataset.sh  properties.info  pspnet101_VOC2012_473.prototxt  subsetof.sh  test.txt  train_subset.txt  train_subset_small.txt
cmake/: FindMATIO.cmake  compile_hseg.cmake
distributed training/: check_hosts.sh  cleanup.sh  collectTestSetFile.sh  consolidate.sh  copyDataset.sh  createJobs.sh  createMachines.sh  distribute.py  execJob.sh  hosts.all.txt  hosts.weekend.txt  hosts.workhours.txt  iter.sh  machines.txt  pickHostFile.sh  reset.sh  schedule.sh  setup_hosts.sh
distributed training/properties/: training_dist_merge.info
exec/: accuracy.cpp  clustering.cpp  inference.cpp  inference_batch.cpp  messy.cpp  train.cpp  train_dist_merge.cpp  train_dist_pred.cpp  train_feat.cpp  util.cpp
include/: Properties.h  Timer.h  UnaryFile.h  typedefs.h
include/Accuracy/: ConfusionMatrix.h
include/Energy/: AdamStepSizeRule.h  DiminishingStepSizeRule.h  EnergyFunction.h  IStepSizeRule.h  LossAugmentedEnergyFunction.h  UnaryFile.h  Weights.h  WeightsVec.h  feature_weights.h
include/GraphOptimizer/: GraphOptimizer.h
include/Image/: Coordinates.h  Feature.h  FeatureImage.h  Feature_.cpp  Feature_.h  Image.h
include/Inference/: Cluster.h  InferenceIterator.h  InferenceResult.h  InferenceResultDetails.h  update_cluster_affil_cuda.cuh
include/Inference/GraphOptimizer/: GraphOptimizer.h
include/Inference/TRW_S_Optimizer/: TRW_S_Optimizer.h
include/Inference/k-prototypes/: Cluster.h  Clusterer.h  Feature.h
include/Threading/: ThreadPool.h  ThreadPool.inl
include/helper/: clustering_helper.h  coordinate_helper.h  cuda_helper.cuh  hash_helper.h  image_helper.h  math_helper.h  opencv_helper.h  utility.h
include/k-prototypes/: Cluster.h  Clusterer.h  Feature.h
lib/caffe/: CMakeLists.txt  Makefile.config
lib/caffe/cmake/: Dependencies.cmake  Summary.cmake
lib/caffe/include/caffe/layers/: ssvm_loss_layer.hpp
lib/caffe/python/caffe/: .gitignore
lib/caffe/python/caffe/proto/: .gitignore
lib/caffe/src/caffe/: CMakeLists.txt
lib/caffe/src/caffe/layers/: crop_layer.cu  ssvm_loss_layer.cpp
lib/caffe/src/caffe/proto/: caffe.proto
lib/densecrf/: CMakeLists.txt
lib/gco-v3.0/: CMakeLists.txt  GCoptimization.h  block.h
lib/trw_s/: CMakeLists.txt  MRFEnergy.cpp  MRFEnergy.h  minimize.cpp  typeBinary.h  typeBinaryFast.h  typeGeneral.h  typePotts.h  typeTruncatedLinear.h  typeTruncatedLinear2D.h  typeTruncatedQuadratic.h  typeTruncatedQuadratic2D.h
net/: eval_all.m
net/prototxt/: deploy.prototxt  solver.prototxt  train_val.prototxt
properties/: .gitignore  accuracy.info  clustering.info  inference.info  inference_batch.info  training.info  util.info
properties/defaults/: accuracy.info  clustering.info  dataset.info  hseg_infer.info  hseg_infer_batch.info  hseg_train_feat.info  inference.info  inference_batch.info  param.info  train.info  training.info  util.info
sanitizer/address/: CMakeLists.txt
sanitizer/gprof/: CMakeLists.txt
sanitizer/leak/: CMakeLists.txt
sanitizer/profile/: CMakeLists.txt
sanitizer/thread/: CMakeLists.txt
sanitizer/undefined/: CMakeLists.txt
src/: Timer.cpp  UnaryFile.cpp
src/Accuracy/: ConfusionMatrix.cpp
src/Energy/: AdamStepSizeRule.cpp  DiminishingStepSizeRule.cpp  EnergyFunction.cpp  LossAugmentedEnergyFunction.cpp  UnaryFile.cpp  Weights.cpp  WeightsVec.cpp  feature_weights.cpp
src/GraphOptimizer/: GraphOptimizer.cpp
src/Image/: FeatureImage.cpp
src/Inference/: InferenceIterator.cpp  InferenceResult.cpp  update_cluster_affil_cuda.cu
src/Inference/GraphOptimizer/: GraphOptimizer.cpp
src/Inference/k-prototypes/: Cluster.cpp  Clusterer.cpp  Feature.cpp
src/Threading/: ThreadPool.cpp
src/helper/: clustering_helper.cpp  cuda_helper.cu  image_helper.cpp  math_helper.cpp  opencv_helper.cpp
src/k-prototypes/: Cluster.cpp  Clusterer.cpp  Feature.cpp
test/: gtest.cpp
test/Inference/: InferenceIterator_Test.cpp
test/helper/: cuda_helper_test.cu
